@@ -5,6 +5,8 @@ Distributed under the GPL v3
 xx xxx 2017, Version 2.27
 
 - --showmeta now prints the resolution for HDS streams
+- Fixed --maxbitrate on HDS streams
+- Warn if output file extension is unsupported
 
 14 Oct 2017, Version 2.26
 
